--- a/mysvc.yml
+++ b/mysvc.yml
@@ -5,10 +5,10 @@ metadata:
   labels: 
    app: mynginx
 spec:
-  type: NodePort 
+  type: NodePort
   ports: 
   - port: 80
-    node port: 30001
+    Node Port: 30001
     protocol: TCP
   selector:
     app: mynginx
