--- a/mysvc.yml
+++ b/mysvc.yml
@@ -8,7 +8,7 @@ spec:
   type: NodePort
   ports: 
   - port: 80
-    NodePort: 30001
+    nodePort: 30001
     protocol: TCP
   selector:
     app: mynginx
