--- a/myss.yml
+++ b/myss.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
-   name: mynginx-rc
+  name: mynginx-ss
 spec:
   replicas: 5
   selector:
     app: mynginx
   template:
-    metadata: 
+    metadata:
       labels:
           app: mynginx
     spec:
