--- a/myRc.yml
+++ b/myRc.yml
@@ -1,18 +1,18 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
-   name: mynginx-rc
+   name: myjenkinsapp-rc
 spec:
   replicas: 5
   selector:
-    app: mynginx
+    app: myjenkinsapp
   template:
     metadata: 
       labels:
-          app: mynginx
+          app: myjenkinsapp
     spec:
       containers:
-        - name: mynginx-container
-          image: mynginx
+        - name: myjenkinsapp-container
+          image: rohitsharma93/myjenkins28april:1
           ports:
-            - containerPort: 80
+            - containerPort: 8080
