--- a/mysvc.yml
+++ b/mysvc.yml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mynginx-svc
+  name: myjenkinsapp-svc
   labels: 
-   app: mynginx
+   app: myjenkinsapp
 spec:
   type: NodePort
   ports: 
-  - port: 80
+  - port: 8080
     nodePort: 30001
     protocol: TCP
   selector:
-    app: mynginx
+    app: myjenkinsapp
     
   
