--- a/myRc.yml
+++ b/myRc.yml
@@ -1,18 +1,18 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
-   name: myjenkinsapp-rc
+   name: mynginx-rc
 spec:
-  replicas: 5
+  replicas: 3
   selector:
-    app: myjenkinsapp
+     app: mynginx
   template:
-    metadata: 
+    metadata:
       labels:
-          app: myjenkinsapp
+          app: mynginx
     spec:
       containers:
-        - name: myjenkinsapp-container
-          image: rohitsharma93/myjenkins28april:1
-          ports:
-            - containerPort: 8080
+       - name: mynginx-container
+         image: mynginx
+         ports:
+         - containerPort: 80
