--- a/myRs.yml
+++ b/myRs.yml
@@ -1,18 +1,18 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
-   name: mynginx-rs
+   name: nginx-rs
 spec:
   replicas: 3
   selector:
-     app: mynginx
+     app: nginx
   template:
     metadata: 
       labels:
-          app: mynginx
+          app: nginx
     spec:
       containers:
-       - name: mynginx-container
-         image: mynginx
+       - name: nginx-container
+         image: nginx
          ports:
          - containerPort: 80
