--- a/myRc.yml
+++ b/myRc.yml
@@ -15,6 +15,6 @@ spec:
     spec:
       containers:
        - name: javaapp-container
-         image: rohitsharma93/myjenkins2may
+         image: rohitsharma93/myjenkins2may:1
          ports:
          - containerPort: 8080
