--- a/myRs.yml
+++ b/myRs.yml
@@ -1,18 +1,18 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
-   name: nginx-rs
+   name: javaapp-rs
 spec:
   replicas: 3
   selector:
-     app: nginx
+     app: javaapp
   template:
     metadata: 
       labels:
-          app: nginx
+          app: javaapp
     spec:
       containers:
-       - name: nginx-container
-         image: nginx
+       - name: javaapp-container
+         image: javaapp
          ports:
-         - containerPort: 80
+         - containerPort: 8080
