--- a/myRc.yml
+++ b/myRc.yml
@@ -1,18 +1,18 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
-   name: nginx-rc
+   name: javaapp-rc
 spec:
   replicas: 3
   selector:
-     app: nginx
+     app: javaapp
   template:
     metadata:
       labels:
-          app: nginx
+          app: javaapp
     spec:
       containers:
-       - name: nginx-container
+       - name: javaapp-container
          image: rohitsharma93/myjenkins2may
          ports:
-         - containerPort: 80
+         - containerPort: 8080
