--- a/mykcsvc.yml
+++ b/mykcsvc.yml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-svc
+  name: javaapp-svc
   labels: 
-     app: nginx
+     app: javaapp
 spec:
   type: NodePort
   ports:
-  - port: 80
+  - port: 8080
     nodePort: 30001
     protocol: TCP
   selector:
-    app: nginx
+    app: javaapp
   
 
