--- a/mykcsvc.yml
+++ b/mykcsvc.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: myjavaapp-svc
+  name: javaapp-svc
   labels: 
-     app: myjavaapp
+     app: javaapp
 spec:
   type: NodePort
   ports:
@@ -11,6 +11,6 @@ spec:
     nodePort: 30001
     protocol: TCP
   selector:
-    app: myjavaapp
+    app: javaapp
   
 
