--- a/mydeploy.yml
+++ b/mydeploy.yml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: javaapp-deploy
+  name: myjavaapp-deploy
   labels:
-     app: javaapp
+     app: myjavaapp
 spec:
   replicas: 3
   selector:
     matchLabels:
-         app: javaapp
+         app: myjavaapp
   template:
      metadata:
        labels:
-         app: javaapp
+         app: myjavaapp
      spec:
      containers:
        - name: javaapp-container
