--- a/mydeploy.yml
+++ b/mydeploy.yml
@@ -16,6 +16,6 @@ spec:
      spec:
        containers:
        - name: javaapp-container
-         image: rohitsharma93/myjavaapp5may22
+         image: rohitsharma93/myjavaapp5may22:1
          ports:
          - containerPort: 8080
