--- a/mydeploy.yml
+++ b/mydeploy.yml
@@ -17,4 +17,5 @@ spec:
        containers:
        - name: myjavaapp-container
          image: rohitsharma93/myjavaimage1522:1
+         ports:
          - containerPort: 8080
