--- a/myRc.yml
+++ b/myRc.yml
@@ -1,18 +1,20 @@
 apiVersion: v1
 kind: ReplicationController
 metadata:
-   name: javaapp-rc
+   name: myjavaapp-rc
 spec:
   replicas: 3
-  selector:
-     app: javaapp
+  selector: 
+     app: myjavaapp
+     version: 2.6.1
   template:
-    metadata:
-      labels:
-          app: javaapp
-    spec:
-      containers:
-       - name: javaapp-container
-         image: rohitsharma93/myjenkins2may
-         ports:
-         - containerPort: 8080
+     metadata:
+       labels:
+           app: myjavaapp
+           version: 2.6.1
+     spec:
+        containers:
+         - name: myjavaapp-container
+           image: rohitsharma93/myimage2july:1
+           ports:
+           - containerPort: 8080
